[gd_scene load_steps=55 format=3 uid="uid://bmp0g88dtijqw"]

[ext_resource type="PackedScene" uid="uid://botai66n8rwt3" path="res://addons/top_down/scenes/actors/actor.tscn" id="1_mvls6"]
[ext_resource type="Script" path="res://addons/great_games_library/nodes/ResourceNode/ResourceNodeItem.gd" id="2_20qkb"]
[ext_resource type="Shader" path="res://addons/top_down/scripts/shaders/color_flash.gdshader" id="2_wcwdo"]
[ext_resource type="Script" path="res://addons/top_down/scripts/actor/ActorStatsResource.gd" id="3_2ebh0"]
[ext_resource type="Script" path="res://addons/top_down/scripts/actor/PlayerInput.gd" id="4_uihqc"]
[ext_resource type="Resource" uid="uid://c61lm3lfv4u6h" path="res://addons/top_down/resources/health_resource/player_health.tres" id="4_y5gff"]
[ext_resource type="Script" path="res://addons/great_games_library/resources/ValueResource/BoolResource.gd" id="5_smnd7"]
[ext_resource type="Script" path="res://addons/top_down/scripts/actor/PushResource.gd" id="6_2ql4h"]
[ext_resource type="PackedScene" uid="uid://bxf4p5yoajpdu" path="res://addons/top_down/scenes/weapons/gun.tscn" id="6_rnlhu"]
[ext_resource type="Resource" uid="uid://bgdeqbafv3q4r" path="res://addons/top_down/resources/sounds/kill_player.tres" id="6_wov6i"]
[ext_resource type="Script" path="res://addons/top_down/scripts/actor/InputResource.gd" id="7_sciut"]
[ext_resource type="Resource" uid="uid://5emqdks7qgbm" path="res://addons/top_down/resources/global_resources/score_resource.tres" id="8_icjqh"]
[ext_resource type="Script" path="res://addons/top_down/scripts/weapon_system/WeaponManager.gd" id="9_hpc12"]
[ext_resource type="PackedScene" uid="uid://baisjmcsnk3on" path="res://addons/top_down/scenes/weapons/zombie_attack.tscn" id="10_x7xjs"]
[ext_resource type="PackedScene" uid="uid://ghnv48d18ftl" path="res://addons/top_down/scenes/weapons/shotgun.tscn" id="11_nnusp"]
[ext_resource type="Script" path="res://addons/great_games_library/resources/ReferenceNodeResource/ReferenceNodeSetter.gd" id="11_r4axh"]
[ext_resource type="PackedScene" uid="uid://cmmx82t54wble" path="res://addons/top_down/scenes/weapons/sword.tscn" id="12_gom0h"]
[ext_resource type="Resource" uid="uid://b8o2o4evevl8k" path="res://addons/top_down/resources/ReferenceNodeResources/player_reference.tres" id="12_l6ujm"]
[ext_resource type="Resource" uid="uid://dyfuc7bon78d" path="res://addons/top_down/resources/InstanceResources/actors/player_dead_instance_resource.tres" id="12_yuaod"]
[ext_resource type="Script" path="res://addons/top_down/scripts/actor/DashAbility.gd" id="16_vooxc"]
[ext_resource type="Script" path="res://addons/top_down/scripts/actor/Player/PlayerJuice.gd" id="17_32qwh"]
[ext_resource type="Resource" uid="uid://diqvd4u0lbw7h" path="res://addons/top_down/resources/CommandNodeResource/color_flash.tres" id="18_5jtne"]
[ext_resource type="Resource" uid="uid://ddpkkj7j7ync6" path="res://addons/top_down/resources/CameraResources/enemy_damage_shake.tres" id="18_7uk1v"]
[ext_resource type="Resource" uid="uid://dkb7r2v362yj" path="res://addons/top_down/resources/CameraResources/player_damage_shake.tres" id="19_d25rq"]
[ext_resource type="Script" path="res://addons/top_down/scripts/damage/ResetHealth.gd" id="24_xfk7a"]
[ext_resource type="Script" path="res://addons/top_down/scripts/actor/Player/CameraPositionSetter.gd" id="25_s80ev"]
[ext_resource type="Resource" uid="uid://c5igju2sl4cdg" path="res://addons/top_down/resources/CameraResources/camera_reference.tres" id="26_ljkqc"]
[ext_resource type="Resource" uid="uid://b1yn036rka2tk" path="res://addons/top_down/resources/CameraResources/camera_position_resource.tres" id="27_4bh7y"]
[ext_resource type="Script" path="res://addons/top_down/scripts/actor/Player/SafeTileTracker.gd" id="28_ww0nn"]
[ext_resource type="Resource" uid="uid://ct82cq803r2si" path="res://addons/top_down/resources/RoomResources/obstacle_reference.tres" id="29_4dv8f"]
[ext_resource type="Script" path="res://addons/top_down/scripts/actor/Player/HoleRecovery.gd" id="30_n8poo"]
[ext_resource type="Script" path="res://addons/top_down/scripts/actor/VisualInvulnerability.gd" id="32_82fau"]

[sub_resource type="Resource" id="Resource_u7p0r"]
resource_name = "movement  properties"
script = ExtResource("3_2ebh0")
acceleration = 200.0
max_speed = 60.0
version = 0
not_saved = false

[sub_resource type="Resource" id="Resource_y1d7o"]
resource_name = "movement"
script = ExtResource("2_20qkb")
resource = SubResource("Resource_u7p0r")
make_unique = true
description = ""

[sub_resource type="Resource" id="Resource_3g443"]
resource_name = "health"
script = ExtResource("2_20qkb")
resource = ExtResource("4_y5gff")
make_unique = false
description = "Player health is referenced by GUI. For that reason shouldn't be duplicated and need to be reset_resource() when spawning a new player."

[sub_resource type="Resource" id="Resource_fwu4v"]
resource_name = "Receive damage bool"
script = ExtResource("5_smnd7")
value = true
default_value = true
version = 0
not_saved = false

[sub_resource type="Resource" id="Resource_8pyxd"]
resource_name = "receive_damage"
script = ExtResource("2_20qkb")
resource = SubResource("Resource_fwu4v")
make_unique = true
description = "Can receive a damage"

[sub_resource type="Resource" id="Resource_xhp0x"]
resource_name = "Push Resource"
script = ExtResource("6_2ql4h")
version = 0
not_saved = false

[sub_resource type="Resource" id="Resource_ltyge"]
resource_name = "push"
script = ExtResource("2_20qkb")
resource = SubResource("Resource_xhp0x")
make_unique = true
description = "PushResource has only a method to pass kickback or push impulse"

[sub_resource type="Resource" id="Resource_8r3vs"]
resource_name = "Dash bool"
script = ExtResource("5_smnd7")
value = false
default_value = false
version = 0
not_saved = false

[sub_resource type="Resource" id="Resource_dsnfh"]
resource_name = "dash"
script = ExtResource("2_20qkb")
resource = SubResource("Resource_8r3vs")
make_unique = true
description = "BoolResource that shows true when dash is enabled."

[sub_resource type="Resource" id="Resource_kivos"]
resource_name = "Hole bool"
script = ExtResource("5_smnd7")
value = false
default_value = false
version = 0
not_saved = false

[sub_resource type="Resource" id="Resource_j3dss"]
resource_name = "hole"
script = ExtResource("2_20qkb")
resource = SubResource("Resource_kivos")
make_unique = true
description = "BoolResource if value is true, it means actor fell in a hole"

[sub_resource type="Resource" id="Resource_k8ute"]
resource_name = "Input resource"
script = ExtResource("7_sciut")
axis = Vector2(0, 0)
action = false
action_2 = false
aim_direction = Vector2(0, 0)
version = 0
not_saved = false

[sub_resource type="Resource" id="Resource_ju227"]
resource_name = "input"
script = ExtResource("2_20qkb")
resource = SubResource("Resource_k8ute")
make_unique = true
description = "Used to control actors movement by it's input node.
"

[sub_resource type="Resource" id="Resource_or6sa"]
resource_name = "score"
script = ExtResource("2_20qkb")
resource = ExtResource("8_icjqh")
make_unique = false
description = ""

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gfelk"]
resource_local_to_scene = true
shader = ExtResource("2_wcwdo")
shader_parameter/overlay = Color(1, 1, 1, 1)
shader_parameter/blend = 0.0

[sub_resource type="Animation" id="Animation_wsv66"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_swd8l"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_wmkbr"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bdy4l"]
_data = {
"RESET": SubResource("Animation_wsv66"),
"idle": SubResource("Animation_swd8l"),
"walk": SubResource("Animation_wmkbr")
}

[sub_resource type="Animation" id="Animation_3p56v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Body/Stretch/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.99, 0.99, 0.99, 1)]
}

[sub_resource type="Animation" id="Animation_67stq"]
resource_name = "invulnerable"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Body/Stretch/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Color(0.99, 0.99, 0.99, 1), Color(0.99, 0.99, 0.99, 0.690196)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f0s3r"]
_data = {
"RESET": SubResource("Animation_3p56v"),
"invulnerable": SubResource("Animation_67stq")
}

[node name="Player" instance=ExtResource("1_mvls6")]
disable_mode = 2
collision_layer = 2
collision_mask = 5

[node name="ResourceNode" parent="." index="0"]
list = Array[ExtResource("2_20qkb")]([SubResource("Resource_y1d7o"), SubResource("Resource_3g443"), SubResource("Resource_8pyxd"), SubResource("Resource_ltyge"), SubResource("Resource_dsnfh"), SubResource("Resource_j3dss"), SubResource("Resource_ju227"), SubResource("Resource_or6sa")])

[node name="AreaReceiver2D" parent="." index="2"]
collision_layer = 2

[node name="Sprite2D" parent="Body/Stretch" index="0"]
modulate = Color(0.99, 0.99, 0.99, 1)
material = SubResource("ShaderMaterial_gfelk")

[node name="CharacterAnimator" parent="Body/Stretch/Sprite2D" index="0"]
libraries = {
"": SubResource("AnimationLibrary_bdy4l")
}

[node name="DamageCooldown" parent="." index="6"]
cooldown_time = 0.5

[node name="SpriteFlip" parent="." index="7"]
flip_type = 1

[node name="HoleDeath" parent="." index="10"]
enabled = false

[node name="ActorDamage" parent="." index="11"]
sound_resource_dead = ExtResource("6_wov6i")
dead_vfx_instance_resource = ExtResource("12_yuaod")

[node name="PlayerInput" type="Node" parent="." index="13" node_paths=PackedStringArray("position_node", "resource_node")]
script = ExtResource("4_uihqc")
position_node = NodePath("..")
aim_offset = Vector2(0, 8)
resource_node = NodePath("../ResourceNode")

[node name="WeaponManager" type="Node2D" parent="." index="14" node_paths=PackedStringArray("resource_node")]
script = ExtResource("9_hpc12")
projectile_parent_path = "../.."
auto_instance_weapons = Array[PackedScene]([ExtResource("11_nnusp"), ExtResource("12_gom0h"), ExtResource("10_x7xjs")])
resource_node = NodePath("../ResourceNode")
collision_mask = 4

[node name="Gun" parent="WeaponManager" index="0" node_paths=PackedStringArray("resource_node") instance=ExtResource("6_rnlhu")]
collision_mask = 5
resource_node = NodePath("../../ResourceNode")

[node name="ReferencePlayer" type="Node" parent="." index="15" node_paths=PackedStringArray("reference_node")]
script = ExtResource("11_r4axh")
reference_node = NodePath("..")
reference_resource = ExtResource("12_l6ujm")
until_tree_exit = false

[node name="DashAbility" type="Node" parent="." index="16" node_paths=PackedStringArray("resource_node")]
script = ExtResource("16_vooxc")
resource_node = NodePath("../ResourceNode")

[node name="PlayerJuice" type="Node" parent="." index="17" node_paths=PackedStringArray("resource_node", "weapon_manager")]
script = ExtResource("17_32qwh")
resource_node = NodePath("../ResourceNode")
weapon_manager = NodePath("../WeaponManager")
enemy_damage_shake = ExtResource("18_7uk1v")
screen_flash_command = ExtResource("18_5jtne")
player_damage_shake = ExtResource("19_d25rq")

[node name="ResetHealth" type="Node" parent="." index="18" node_paths=PackedStringArray("resource_node")]
script = ExtResource("24_xfk7a")
resource_node = NodePath("../ResourceNode")

[node name="CameraPositionSetter" type="Node" parent="." index="19" node_paths=PackedStringArray("target_node")]
script = ExtResource("25_s80ev")
camera_reference = ExtResource("26_ljkqc")
position_resource = ExtResource("27_4bh7y")
target_node = NodePath("..")

[node name="SafeTileTracker" type="Node" parent="." index="20" node_paths=PackedStringArray("actor")]
script = ExtResource("28_ww0nn")
obstacle_tilemap_reference = ExtResource("29_4dv8f")
actor = NodePath("..")

[node name="HoleRecovery" type="Node" parent="." index="21" node_paths=PackedStringArray("safe_tile_tracker", "resource_node", "hole_trigger")]
script = ExtResource("30_n8poo")
safe_tile_tracker = NodePath("../SafeTileTracker")
resource_node = NodePath("../ResourceNode")
hole_trigger = NodePath("../HoleTrigger")

[node name="VisualInvulnerability" type="Node" parent="." index="22" node_paths=PackedStringArray("resource_node", "animation_player")]
script = ExtResource("32_82fau")
resource_node = NodePath("../ResourceNode")
animation_player = NodePath("AnimationPlayer")
animation_invulnerable = &"invulnerable"
animation_normal = &"RESET"

[node name="AnimationPlayer" type="AnimationPlayer" parent="VisualInvulnerability" index="0"]
libraries = {
"": SubResource("AnimationLibrary_f0s3r")
}
